[gd_scene load_steps=23 format=2]

[ext_resource path="res://Code/Toxen.gd" type="Script" id=2]
[ext_resource path="res://JitterFreePixelArt.tres" type="Material" id=3]
[ext_resource path="res://Graphics/ToxenSmall.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 9
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 25, 26 )

[sub_resource type="AtlasTexture" id=2]
flags = 9
atlas = ExtResource( 4 )
region = Rect2( 25, 0, 25, 26 )

[sub_resource type="AtlasTexture" id=3]
flags = 9
atlas = ExtResource( 4 )
region = Rect2( 50, 0, 25, 26 )

[sub_resource type="AtlasTexture" id=4]
flags = 9
atlas = ExtResource( 4 )
region = Rect2( 75, 0, 25, 26 )

[sub_resource type="AtlasTexture" id=5]
flags = 9
atlas = ExtResource( 4 )
region = Rect2( 25, 26, 25, 26 )

[sub_resource type="AtlasTexture" id=6]
flags = 9
atlas = ExtResource( 4 )
region = Rect2( 50, 26, 25, 26 )

[sub_resource type="AtlasTexture" id=7]
flags = 9
atlas = ExtResource( 4 )
region = Rect2( 0, 52, 25, 26 )

[sub_resource type="AtlasTexture" id=8]
flags = 9
atlas = ExtResource( 4 )
region = Rect2( 25, 52, 25, 26 )

[sub_resource type="AtlasTexture" id=9]
flags = 9
atlas = ExtResource( 4 )
region = Rect2( 50, 52, 25, 26 )

[sub_resource type="AtlasTexture" id=10]
flags = 9
atlas = ExtResource( 4 )
region = Rect2( 0, 78, 25, 26 )

[sub_resource type="AtlasTexture" id=11]
flags = 9
atlas = ExtResource( 4 )
region = Rect2( 25, 78, 25, 26 )

[sub_resource type="AtlasTexture" id=12]
flags = 9
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 25, 26 )

[sub_resource type="AtlasTexture" id=13]
flags = 9
atlas = ExtResource( 4 )
region = Rect2( 50, 78, 25, 26 )

[sub_resource type="AtlasTexture" id=14]
flags = 9
atlas = ExtResource( 4 )
region = Rect2( 75, 78, 25, 26 )

[sub_resource type="AtlasTexture" id=15]
flags = 9
atlas = ExtResource( 4 )
region = Rect2( 100, 78, 25, 26 )

[sub_resource type="AtlasTexture" id=16]
flags = 9
atlas = ExtResource( 4 )
region = Rect2( 125, 78, 25, 26 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "smol_attack_1",
"speed": 20.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "smol_attack_2",
"speed": 20.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 12 ), SubResource( 16 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=18]
radius = 5.0
height = 10.0

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 0, 0 )

[node name="Toxen" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
uppercutVelocity = 288.0
attackHitbox = Vector2( 10, 10 )
uppercutHitbox = Vector2( 7, 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 0, -2 )
frames = SubResource( 17 )
animation = "run"
frame = 5
playing = true
offset = Vector2( -2, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 18 )

[node name="AnimTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 19 )

[node name="StunTumer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
